---------------------------------------------------------------------------------------------------
Version: 5.0.6
Date: ????
  Changes:
    - Proper error message when trying to remote control a train and an error happens
---------------------------------------------------------------------------------------------------
Version: 5.0.5
Date: 11. 08. 2020
  Bugfixes:
    - Fixed huge UPS drop when deconstructing a lot of trains by robots
---------------------------------------------------------------------------------------------------
Version: 5.0.4
Date: 28. 07. 2020
  Bugfixes:
    - Fixed alert message for temporary stations
---------------------------------------------------------------------------------------------------
Version: 5.0.3
Date: 18. 06. 2020
  Changes:
    - Added station names to the alert when a train takes too long between stations
---------------------------------------------------------------------------------------------------
Version: 5.0.2
Date: 24. 05. 2020
  Changes:
    - Use builtin events where possible
---------------------------------------------------------------------------------------------------
Version: 5.0.1
Date: 22. 02. 2020
  Bugfixes:
    - Fixed error with pasting entity settings
---------------------------------------------------------------------------------------------------
Version: 5.0.0
Date: 26. 01. 2020
  Changes:
    - Updated for Factorio 0.18
---------------------------------------------------------------------------------------------------
Version: 4.0.17
Date: 03. 10. 2019
  Bugfixes:
    - Fixed button not showing up when the mod was added to an existing save
---------------------------------------------------------------------------------------------------
Version: 4.0.16
Date: 19. 09. 2019
  Bugfixes:
    - Added compatibility with IndustrialRevolution
---------------------------------------------------------------------------------------------------
Version: 4.0.15
Date: 11. 08. 2019
  Bugfixes: